--- a/unsolved/styles.css
+++ b/unsolved/styles.css
@@ -55,6 +55,7 @@ p {
   border: 1.25rem solid #6003C3;
   border-radius: 1rem;
   box-shadow: .5rem .5rem 1rem #808080;
+  cursor: pointer;
 }
 
 #box-1 {
